# code-review

./: .gitignore  README.md  USAGE.md  action.yml  basics.ipynb  build_python_gotchas_kb.py  build_refactoring_patterns_kb.py  build_security_kb.py  create_vector_store.py  cve_dataset.json  cve_testing.ipynb  final.ipynb  new_basics.ipynb  pyproject.toml  review_pr.py  run_review.py  security_bug.py  test_bug.py  test_root.py  user_lookup.py  with_more_rag.ipynb  with_rag.ipynb  with_rag_4.ipynb
.github/workflows/: code-review.yml
chroma_db/: chroma.sqlite3
code_review/: __init__.py  agents.py  pipeline.py  schemas.py  vector_store.py
code_review/benchmarks/: __init__.py  bugsinpy.py  cve.py  synthetic.py  utils.py
code_review/rag/: __init__.py  (+3 more)
cve_patches/: CVE-2020-14343.patch  CVE-2023-30861.patch  CVE-2023-31047.patch  CVE-2023-41164.patch  CVE-2023-43804.patch  CVE-2023-49083.patch  CVE-2023-50447.patch  CVE-2024-23346.patch  CVE-2024-24680.patch  CVE-2024-34064.patch  CVE-2024-35195.patch  CVE-2024-37891.patch  CVE-2024-42005.patch  CVE-2024-47081.patch  CVE-2024-53908.patch  CVE-2024-6345.patch
notebooks/: basics.ipynb  synthetic_examples.ipynb  with_rag.ipynb  with_rag_4_improved.ipynb  with_rag_new.ipynb
rag/: build_code_review_kb.py  build_security_kb.py
test-cases/: 01_sql_injection.diff  01_sql_injection_expected.json  02_logic_bug.diff  02_logic_bug_expected.json  03_code_quality.diff  03_code_quality_expected.json  04_multi_file_security.diff  04_multi_file_security_expected.json  05_multi_file_mixed.diff  05_multi_file_mixed_expected.json
(+2 files in other folders)
