[project]
name = "code-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "jupyter>=1.1.1",
    "openai>=2.8.0",
    "openai-agents[litellm]>=0.5.1",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
]
